ec2.tf
# Создание EC2 Instance
resource "aws_instance" "server" {
  ami           = "ami-0c55b159cbfafe1f0"
  instance_type = "t2.micro"
  key_name      = "my-key"
  vpc_security_group_ids = [aws_security_group.instance.id]
}


# Создание CloudWatch Alarm... Нужно заменить ресурс другим!!!!!! (Не поддерживается новыми версиями)
resource "aws_cloudwatch_metric_alarm" "cpu_utilization_alarm" {
  alarm_name          = "cpu-utilization-alarm"
  comparison_operator = "GreaterThanThreshold"
  evaluation_periods  = "1"
  metric_name         = "CPUUtilization"
  namespace           = "AWS/EC2"
  period              = "60"
  statistic           = "Average"
  threshold           = "80"
  alarm_description   = "Alarm when CPU utilization exceeds 80%"
  /* alarm_actions       = [aws_lambda_function.ar] */
}
